apps/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  namespace: example-kubernetes
#  annotations:
#    kubernetes.io/ingress.class: "kong" # 控制器使用nginx
spec:
  ingressClassName: nginx
  rules:
    - host: ingress.example-kubernetes.com
      http:
        paths:
          - path: /apple
            pathType: Prefix
            backend:
              service:
                name: apple-service
                port:
                  number: 5678
          - path: /banana
            pathType: Prefix
            backend:
              service:
                name: banana-service
                port:
                  number: 5678
